<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chnouman.lastfmapidemo.presentation.detail.DetailFragment">


    <ImageView
        android:id="@+id/albumImageView"
        android:layout_width="@dimen/album_image_size"
        android:layout_height="@dimen/album_image_size"
        android:layout_margin="@dimen/medium_margin"
        android:contentDescription="@string/album_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/albumNameTextView"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumImageView"
        app:layout_constraintTop_toTopOf="@+id/albumImageView"
        tools:text="@string/dummy_album_name" />


    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/albumNameTextView"
        app:layout_constraintStart_toStartOf="@+id/albumNameTextView"
        app:layout_constraintTop_toBottomOf="@id/albumNameTextView"
        tools:text="@string/dummy_artist_name" />

    <TextView
        android:id="@+id/playCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/albumNameTextView"
        app:layout_constraintStart_toStartOf="@+id/albumNameTextView"
        app:layout_constraintTop_toBottomOf="@id/artistTextView"
        tools:text="@string/dummy_track_duration" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/playButton"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:background="@drawable/add_to_favourite_button"
        android:src="@drawable/ic_play"
        app:layout_constraintStart_toStartOf="@id/albumNameTextView"
        app:layout_constraintTop_toBottomOf="@id/playCountTextView" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addToFavouriteButton"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:background="@drawable/add_to_favourite_button"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/playCountTextView" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracksRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:padding="@dimen/medium_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumImageView"
        tools:itemCount="10"
        tools:listitem="@layout/item_track" />
</androidx.constraintlayout.widget.ConstraintLayout>
